kubectl/omada-controller/deployment.yaml
# this example runs in a rootless configuration

apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: omada-controller
  template:
    metadata:
      labels:
        app: omada-controller
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        runAsNonRoot: false
        fsGroup: 0
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: omada-controller
        image: mbentley/omada-controller:5.15
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /opt/tplink/EAPController/data
            name: nfs
            subPath: applications/omada-2/volumes/data
          - mountPath: /opt/tplink/EAPController/logs
            name: nfs
            subPath: applications/omada-2/volumes/logs
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "3Gi"
            cpu: "1000m"
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
      restartPolicy: Always      
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: omada-svc-tcp
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: kube-system-skipverify@kubernetescrd        
spec:
  type: LoadBalancer
  selector:
    app: omada-controller
  ports:
    - name: manage-http
      port: 8088
      targetPort: 8088
      protocol: TCP
    - name: manage-https
      port: 8043
      targetPort: 8043
      protocol: TCP
    - name: portal-https
      port: 8843
      targetPort: 8843
      protocol: TCP
    - name: adopt-v1
      port: 29812
      targetPort: 29812
      protocol: TCP
    - name: upgrade-v1
      port: 29813
      targetPort: 29813
      protocol: TCP
    - name: manager-v1
      port: 29811
      targetPort: 29811
      protocol: TCP
    - name: manager-v2
      port: 29814
      targetPort: 29814
      protocol: TCP
    - name: transfer-v2
      port: 29815
      targetPort: 29815
      protocol: TCP
    - name: rtty
      port: 29816
      targetPort: 29816
      protocol: TCP
    - name: device-monitor
      port: 29817
      targetPort: 29817
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: omada-svc-udp
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: omada-controller
  ports:
    - name: app-discovery
      port: 27001
      targetPort: 27001
      protocol: UDP
    - name: udp-discovery
      port: 29810
      targetPort: 29810
      protocol: UDP
    - name: udp-management
      port: 19810
      targetPort: 19810
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
      - omada.joeberry.org
  rules:
  - host: omada.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omada-svc-tcp
            port:
              number: 8043
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd,kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: omada.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omada-svc-tcp
            port:
              number: 8043
